--- a/app/.htaccess
+++ b/app/.htaccess
@@ -314,9 +314,9 @@ AddDefaultCharset utf-8
 # danger when anyone has access to them.
 
 <FilesMatch "(^#.*#|\.(bak|config|dist|fla|inc|ini|log|psd|sh|sql|sw[op])|~)$">
-    Order allow,deny
-    Deny from all
-    Satisfy All
+    #Order allow,deny
+    #Deny from all
+    #Satisfy All
 </FilesMatch>
 
 # ------------------------------------------------------------------------------
